changes exported icon

--- a/ui/icons/disk.reel/disk.html
+++ b/ui/icons/disk.reel/disk.html
@@ -69,7 +69,7 @@
     </div>
     <div data-montage-id="removedStatus" class="DiskIcon-removedStatus">
         <svg data-arg="offline"><use xlink:href="#i-offline"/></svg>
-        <svg data-arg="exported" class="removedStatus-exported"><use xlink:href="#i-offline"/></svg>
+        <svg data-arg="exported" class="removedStatus-exported"><use xlink:href="#i-alert-circle"/></svg>
     </div>
     <div data-montage-id="substitution" class="DiskIcon-img">
         <img data-arg="hdd" src="./hdd.svg" alt="HDD Icon">
