changed 'expires at' to 'expires on'

--- a/ui/sections/storage/inspectors/snapshot.reel/snapshot.html
+++ b/ui/sections/storage/inspectors/snapshot.reel/snapshot.html
@@ -226,7 +226,7 @@
             <div data-montage-id="expirationType"></div>
             <div data-montage-id="expirationSubstitution">
                 <div data-arg="never"></div>
-                <div data-arg="at">
+                <div data-arg="on">
                     <div data-montage-id="expirationDate"></div>
                 </div>
                 <div data-arg="after">
