UPDATED: switch from date field to datetime field

--- a/ui/sections/task/inspectors/tasks.reel/tasks.html
+++ b/ui/sections/task/inspectors/tasks.reel/tasks.html
@@ -78,7 +78,7 @@
             }
         },
         "started_after": {
-            "prototype": "blue-shark/ui/date.reel",
+            "prototype": "blue-shark/ui/datetime.reel",
             "properties": {
                 "element": {"#": "started_after"}
             },
@@ -87,7 +87,7 @@
             }
         },
         "finished_at": {
-            "prototype": "blue-shark/ui/date.reel",
+            "prototype": "blue-shark/ui/datetime.reel",
             "properties": {
                 "element": {"#": "finished_at"}
             },
