--- a/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
+++ b/ui/sections/storage/inspectors/volume-dataset.reel/volume-dataset.html
@@ -161,7 +161,7 @@
             "prototype": "ui/controls/inspector-option.reel",
             "properties": {
                 "element": {"#": "vmwareSnapshots"},
-                "label": "VMWare Snapshots"
+                "label": "VMware Snapshots"
             },
             "bindings": {
                 "object": {"<-": "@owner.vmwareDatasets.filter{dataset == @owner.object.id}"},
