made field-treeview control to respect placeholder property

--- a/ui/controls/field-treeview.reel/field-treeview.html
+++ b/ui/controls/field-treeview.reel/field-treeview.html
@@ -42,8 +42,9 @@
                 "element": {"#": "pathInput"}
             },
             "bindings": {
+                "placeholder": {"<-" : "@owner.placeholder || 'none'"},
                 "disabled": {"<-": "@owner.disabled || @owner.readOnly"},
-                "value": {"<-": "!@owner.selectedPath ? 'none' : (@owner.selectedPath + (!!@owner.suffix ? '/' + @owner.suffix : '')).replace(@owner.removePrefix || '', '')"},
+                "value": {"<-": "!@owner.selectedPath ? '' : (@owner.selectedPath + (!!@owner.suffix ? '/' + @owner.suffix : '')).replace(@owner.removePrefix || '', '')"},
                 "disabled": {"<-": "@owner.isExpanded || !!@owner.isNotTypable"},
                 "delegate": {"<-": "@owner.pathInputDelegate"}
             }
