Fix disk allocation

--- a/ui/sections/storage/inspectors/topology.reel/topology.html
+++ b/ui/sections/storage/inspectors/topology.reel/topology.html
@@ -54,7 +54,7 @@
                 "topology": {"@": "topology"}
             },
             "bindings": {
-                "disks": {"<-": "@owner.disks.filter{(isAvailable || isTemporaryAvailable) && !isReserved}"},
+                "disks": {"<-": "@owner.availableDisks"},
                 "object": {"<-": "@owner.topologyProxy"}
             }
         }
