FIXED: use binary `running` field instead of text field `status` to determine container's state
Ticket: #19590

--- a/ui/sections/containers/inspectors/container.reel/container.html
+++ b/ui/sections/containers/inspectors/container.reel/container.html
@@ -19,7 +19,7 @@
                 "value": "Start"
             },
             "bindings": {
-                "disabled": {"<-": "@owner.object.status.toLowerCase().startsWith('up')"}
+                "disabled": {"<-": "@owner.object.running"}
             }
         },
 
