--- a/ui/sections/system/inspectors/ntpserver.reel/ntpserver.html
+++ b/ui/sections/system/inspectors/ntpserver.reel/ntpserver.html
@@ -21,7 +21,8 @@
                 "validationController": {"@": "validationController"},
                 "canDelete": true,
                 "canSave": true,
-                "canRevert": true
+                "canRevert": true,
+                "controller": {"@": "owner"}
             },
             "bindings": {
                 "context": {"<-": "@owner.context"},
