Replace the volume entry field for DC service with a dropdown
Ticket: #19623

--- a/ui/inspectors/service.reel/dc-service.reel/dc-service.html
+++ b/ui/inspectors/service.reel/dc-service.reel/dc-service.html
@@ -17,13 +17,14 @@
             ]
         },
         "volume": {
-            "prototype": "blue-shark/ui/field-text-input.reel",
+            "prototype": "blue-shark/ui/field-select.reel",
             "properties": {
                 "element": {"#": "volume"},
                 "label": "Volume"
             },
             "bindings": {
-                "value": {"<->": "@owner.object.volume"}
+                "options" : {"<-": "@owner.volumeOptions"},
+                "selectedValue": {"<->": "@owner.object.volume"}
             }
         },
         "ip": {
