--- a/ui/inspectors/service.reel/dc-service.reel/dc-service.html
+++ b/ui/inspectors/service.reel/dc-service.reel/dc-service.html
@@ -16,10 +16,18 @@
                 }
             ]
         },
+        "select-option-converter": {
+            "prototype": "core/converter/select-option-converter",
+            "properties": {
+                "labelPropertyName": "id",
+                "valuePropertyName": "id"
+            }
+        },
         "volume": {
             "prototype": "blue-shark/ui/field-select.reel",
             "properties": {
                 "element": {"#": "volume"},
+                "converter": {"@": "select-option-converter"},
                 "label": "Volume"
             },
             "bindings": {
