--- a/ui/main-sidebar/main-navigation.reel/main-navigation.html
+++ b/ui/main-sidebar/main-navigation.reel/main-navigation.html
@@ -17,7 +17,7 @@
                 "isSelectionEnabled": true
             },
             "bindings": {
-                "content": {"<-": "@owner.sections"}
+                "content": {"<-": "@owner.sections.filter{!isHidden}"}
             }
         },
 
