--- a/ui/main-sidebar/current-user-summary.reel/current-user-summary.html
+++ b/ui/main-sidebar/current-user-summary.reel/current-user-summary.html
@@ -27,13 +27,13 @@
             "properties": {
                 "element": {"#": "hostStatus"},
                 "colorMapping": {
-                    "CONNECTED": "green",
+                    "OPEN": "green",
                     "CONNECTING": "yellow",
-                    "DISCONNECTED": "red"
+                    "CLOSED": "red"
                 }
             },
             "bindings": {
-                "value": {"<-": "@owner.application.dataService.backendBridge.connectionStatus"}
+                "value": {"<-": "@owner.middlewareClient.state"}
             }
         },
         "host": {
@@ -42,7 +42,16 @@
                 "element": {"#": "host"}
             },
             "bindings": {
-                "value": {"<-": "@owner.application.sessionService.session.host.replace(@owner.dotRegEx, '. ')"}
+                "value": {"<-": "@owner.middlewareClient.url"}
+            }
+        },
+        "user": {
+            "prototype": "montage/ui/text.reel",
+            "properties": {
+                "element": {"#": "user"}
+            },
+            "bindings": {
+                "value": {"<-": "@owner.middlewareClient.user"}
             }
         },
         "date": {
@@ -71,6 +80,7 @@
 <body>
     <div data-montage-id="owner" class="CurrentUserSummary">
         <div data-montage-id="hostStatus" class="CurrentUserSummary-hostStatus"></div>
+        <div data-montage-id="user" class="CurrentUserSummary-user"></div>
         <div data-montage-id="host" class="CurrentUserSummary-host"></div>
         <div class="CurrentUserSummary-time">
             <div data-montage-id="date"></div>
