--- a/ui/controls/foldable-section.reel/foldable-section.html
+++ b/ui/controls/foldable-section.reel/foldable-section.html
@@ -51,7 +51,7 @@
                 <use xlink:href="#i-arrow"/>
             </svg>
         </button>
-        <div data-montage-id="sectionContent" class="FoldableSection-content" style="display:none;">
+        <div data-montage-id="sectionContent" class="FoldableSection-content">
             <div data-montage-id="contentContainer" class="FoldableSection-contentContainer">
                 <div data-param="*"></div>
             </div>
